# laboratory_practice

./: CMakeLists.txt
lab_2_lib/: CMakeLists.txt  Class.cpp  Class.h
lab_2_main/: CMakeLists.txt  main.cpp
lab_2_tests/: CMakeLists.txt  tests.cpp
